syntax = "proto3";

option go_package = "proto";

service UserService {
  rpc Signup(ReqSignup) returns (RespSignup) {}  // 用户注册服务
  rpc Signin(ReqSignin) returns (RespSignin) {}  // 用户登录服务
  rpc UserInfo(ReqUserInfo) returns (RespUserInfo) {}   // 用户信息服务
  rpc QueryFileMetas(ReqQueryFileMetas) returns (RespQueryFileMetas) {}  // 获取用户已上传文件服务
}

message ReqSignup {
  string username = 1;
  string password = 2;
}

message RespSignup {
  int32 code = 1;
  string message = 2;
}

message ReqSignin {
  string username = 1;
  string password = 2;
}

message RespSignin {
  int32 code = 1;
  string token = 2;
  string message = 3;
}

message ReqUserInfo {
  string username = 1;
}

message RespUserInfo {
  int32 code = 1;
  string message = 2;
  string username = 3;
  string email = 4;
  string phone = 5;
  string signup = 6;
  string lastActiveAt = 7;
  int32 status = 8;
}

message ReqQueryFileMetas {
  int32 limitCnt = 1;
  string username = 2;
}

message RespQueryFileMetas {
  int32 code = 1;
  string msg = 2;
  bytes fileMetas = 3;
}
